[gd_scene load_steps=9 format=2]

[ext_resource path="res://02test/Gachapon/Gatchapon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/NPCs/Cyclops.png" type="Texture" id=2]
[ext_resource path="res://Assets/MyTheme/MyTheme1.tres" type="Theme" id=3]
[ext_resource path="res://Sprites/Untitled 22 1.png" type="Texture" id=4]
[ext_resource path="res://02test/Gachapon/Untitled 9.png" type="Texture" id=5]
[ext_resource path="res://02test/Gachapon/GachaPon.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Items/Money/Money.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Items/Money/Money1.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -74.0
margin_right = 97.0
margin_bottom = 34.0
theme = ExtResource( 3 )

[node name="PayButton" type="Button" parent="Panel2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 136.0
margin_top = -93.0
margin_right = 176.0
margin_bottom = -67.0
theme = ExtResource( 3 )
text = "OK"

[node name="Exit" type="Button" parent="Panel2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -54.0
margin_right = -17.0
margin_bottom = -28.0
theme = ExtResource( 3 )
text = "Exit"

[node name="Untitled9" type="Sprite" parent="Panel2"]
position = Vector2( 45, 40 )
texture = ExtResource( 5 )

[node name="Untitled221" type="Sprite" parent="Panel2"]
position = Vector2( 169, 92 )
texture = ExtResource( 4 )

[node name="Pon" type="Sprite" parent="Panel2"]
position = Vector2( 90, 56 )
texture = ExtResource( 6 )

[node name="Cyclops" type="Sprite" parent="Panel2"]
position = Vector2( 176, 93 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -76.0
margin_right = 53.5
margin_bottom = -63.0
text = "BONUS !!!"
align = 1

[node name="TextureButton" type="TextureButton" parent="Panel2"]
margin_left = 8.0
margin_top = 81.0
margin_right = 25.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[connection signal="pressed" from="Panel2/PayButton" to="." method="_on_PayButton_pressed"]
[connection signal="pressed" from="Panel2/TextureButton" to="." method="_on_TextureButton_pressed"]
